--- a/requirements.txt
+++ b/requirements.txt
@@ -2,6 +2,7 @@ black==22.1.0
 Django==3.2
 djangorestframework==3.13.1
 django-crontab==0.7.1
+drf-yasg==1.20.0
 Pillow==9.0.1
 psycopg2-binary==2.9.3
 python-dotenv==0.19.2
